Update Health, Environment and Adhesion page

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -37,7 +37,7 @@ const currentPageColor = "";
 const hoverTextColor = "hover:text-slate-600";
 ---
 
-<nav class="w-full basis-3/4 pt-5">
+<nav class="w-full pt-5">
     <ul class="flex flex-col">
         {
             pages.map((page) => {
