--- a/src/pages/research/environment.astro
+++ b/src/pages/research/environment.astro
@@ -1,6 +1,7 @@
 ---
 import ResearchTitle from "../../components/ResearchTitle.astro";
 import BaseLayout from "../../layouts/BaseLayout.astro";
+import { Picture } from "@astrojs/image/components";
 const pageTitle = "Environment";
 ---
 
@@ -9,6 +10,155 @@ const pageTitle = "Environment";
     <ResearchTitle />
     <h2 class="text-4xl font-bold">{pageTitle}</h2>
     <article>
-        <p>Some text</p>
+        <h3>
+            Advances in PHA thin films formation applied to paper packagings
+        </h3>
+        <p>
+            Nowadays, packaging materials are increasingly designed to minimize
+            their impact on environment. Actually, packaging are made of
+            petroleum-based plastics (PP,PE). Especially, paper-based packaging
+            are covered with a thin film of PP/PE. This film confers barrier
+            properties against gas and water to the paper, but removes the paper
+            recyclability of the paper. Combined to the poor collection and
+            recycling channels, there is a need to find new, greener alternative
+            to those petroleum-based materials PHAs (PolyHydroxyAlcanoates) are
+            a credible alternative when combined to cellulose-based substrates,
+            since PHAs are bio-sourced and biodegradable, added to their
+            excellent barrier properties. Therefore, a paper covered with PHA
+            gains outstanding barrier properties (gas, water). Moreover, the
+            PHA/paper packaging becomes fully recyclable. Since both PHA and
+            paper are bio-sourced, a PHA/paper packaging will strongly
+            contribute to a circular economy. We stand out from other PHA
+            research by using powder rather than pellets, since the former is
+            the native form of the PHA when extracted from bacteria
+        </p>
+        <h4 class="text-l font-bold">Results:</h4>
+        <p>
+            We developed three technologies to deposit PHA powder in a
+            controlled fashion without any formulation nor additives in the PHA.
+        </p>
+        <p>
+            We produced multi-layer structures (MLS) of PHBV/papers by a
+            straightforward powder deposition methodology followed by
+            conventional compression moulding. The use of the powder allows us
+            to obtain thin films (&lt; 50µm) of PHBV of controlled thickness
+            with a 30 µm thickness in average, for a weight of ca. 50 g/m². The
+            MLS exhibited excellent water and oil barrier properties. The MLS’
+            Cobb values were at least 15 times lower than the neat papers and 5
+            times lower than other reported biopolymers. Moreover, the water
+            vapour and oxygen barrier properties were in the range of reported
+            biopolymers. While the water vapour and oxygen barrier properties
+            are still far from their petro-sourced counterparts, we demonstrated
+            that the MLS developed herein may be credible alternative to
+            petro-sourced polymers, suitable for single use food packaging, such
+            as food trays.
+        </p>
+        <p>
+            Additive-free water/PHA solutions were found to be suitable to form
+            thin films of PHA (&lt;10µm). We are in the process of patenting
+            this straightforward process.
+        </p>
+        <p>
+            Spary-drying of PHA in vortex turbines was found as an interesting
+            deposition technology. Work is under progress to establish
+            process/structure/properties of the deposited PHA layer
+        </p>
+        <section class="flex flex-row justify-around">
+            <figure
+                class="flex flex-col justify-center items-center text-center">
+                <figcaption>
+                    15x15cm² of PHA powder with a constant thickness
+                </figcaption>
+                <Picture
+                    src="/assets/images/environment-1-1.png"
+                    widths={[100, 150, 500]}
+                    aspectRatio="1:0"
+                    sizes="(max-width: 600px) 150px, 500px"
+                    formats={["png"]}
+                    alt="Home1"
+                />
+                <figcaption>
+                    Cross-section after compression moulding
+                </figcaption>
+            </figure>
+            <figure
+                class="flex flex-col justify-center items-center text-center">
+                <Picture
+                    src="/assets/images/environment-1-2.png"
+                    widths={[50, 200, 300]}
+                    aspectRatio="1:0"
+                    sizes="(max-width: 600px) 200px, 300px"
+                    formats={["png"]}
+                    alt="Home1"
+                />
+                <figcaption>
+                    PHA film synthesized from additive-free water/PHA solutions
+                    (patent pending).
+                </figcaption>
+            </figure>
+            <figure
+                class="flex flex-col justify-center items-center text-center">
+                <Picture
+                    src="/assets/images/environment-1-3.jpg"
+                    widths={[100, 200, 350]}
+                    aspectRatio="1:0"
+                    sizes="(max-width: 600px) 200px, 350px"
+                    formats={["jpg"]}
+                    alt="Home1"
+                />
+                <figcaption>Spray-dried PHA powder</figcaption>
+            </figure>
+        </section>
+    </article>
+    <article>
+        <h3>Synthesis of biodegradable PHA blends by reactive extrusion</h3>
+        <p class="italic">Work in progress</p>
+    </article>
+    <article>
+        <h3>
+            Recycling and upscaling household thermoplastic waste (with a focus
+            on milk bottles)
+        </h3>
+        <p>
+            As a part of the European project RevalPET, I was in charge of the
+            management of the 4th work package, which includes the coordination
+            of the different partners to achieve the goal of the project, the
+            redaction of reports on the results of the tests. The ambition of
+            the project is to be able to produce high-performance materials from
+            recycled wastes, in agreement with the environmental regulations
+            REACH. From an experimental point view, the work package assigned
+            require to evaluate the mechanical properties (tensile tests,
+            fatigue) of the blends produced by the partners. In-situ digital
+            image correlation and infrared thermography enable to monitor the
+            damaging of the sample during a fatigue solicitation. Additional
+            physic-chemical analysis (DSC, FTIR) are performed to elucidate the
+            influence of cycled loading on the crystallinity of the blends.
+        </p>
+        <section class="flex flex-row justify-around">
+            <figure
+                class="flex flex-col justify-center items-center text-center">
+                <Picture
+                    src="/assets/images/environment-3-1.png"
+                    widths={[100, 200, 400]}
+                    aspectRatio="1:0"
+                    sizes="(max-width: 600px) 200px, 400px"
+                    formats={["png"]}
+                    alt="Home1"
+                />
+                <figcaption></figcaption>
+            </figure>
+            <figure
+                class="flex flex-col justify-center items-center text-center">
+                <Picture
+                    src="/assets/images/environment-3-2.png"
+                    widths={[100, 200, 350]}
+                    aspectRatio="1:0"
+                    sizes="(max-width: 600px) 200px, 350px"
+                    formats={["png"]}
+                    alt="Home1"
+                />
+                <figcaption></figcaption>
+            </figure>
+        </section>
     </article>
 </BaseLayout>
