--- a/src/pages/research/index.astro
+++ b/src/pages/research/index.astro
@@ -7,6 +7,21 @@ const pageTitle = "Research";
 <BaseLayout {pageTitle}>
     <h2 class="text-4xl font-bold mt-7">{pageTitle}</h2>
     <article>
-        <p>Some text</p>
+        <figure>
+            <img />
+            <figcaption>Health</figcaption>
+        </figure>
+    </article>
+    <article>
+        <figure>
+            <img />
+            <figcaption>Environment</figcaption>
+        </figure>
+    </article>
+    <article>
+        <figure>
+            <img />
+            <figcaption>Adhesion</figcaption>
+        </figure>
     </article>
 </BaseLayout>
