--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -18,7 +18,7 @@ const bgColorAside = "bg-neutral-100";
     <body class="flex">
         <aside
             class=`flex flex-col basis-1/5 items-center min-w-[200px] px-4 border-r border-zinc-500 ${bgColorAside}`>
-            <section class="flex flex-col basis-1/4 justify-evenly w-full">
+            <section class="flex flex-col justify-start w-full">
                 <h1 class="text-3xl text-center font-bold">Olivier Tramis</h1>
                 <p class="text-xl text-center font-bold">
                     International researcher
