Change all aspect ratio

--- a/src/pages/research/adhesion.astro
+++ b/src/pages/research/adhesion.astro
@@ -27,13 +27,13 @@ const pageTitle = "Adhesion";
             and presented in both international and national conferences, as
             well as reported to industrial partners.
         </p>
-        <section class="flex justify-around">
+        <section class="flex justify-around items-end">
             <figure
                 class="flex flex-col justify-center items-center text-center">
                 <Picture
                     src="/assets/images/adhesion-1-1.png"
                     widths={[100, 200, 600]}
-                    aspectRatio="1:0"
+                    aspectRatio="710:514"
                     sizes="(max-width: 600px) 200px, 600px"
                     formats={["png"]}
                     alt="Home1"
@@ -45,7 +45,7 @@ const pageTitle = "Adhesion";
                 <Picture
                     src="/assets/images/adhesion-1-2.png"
                     widths={[100, 200, 600]}
-                    aspectRatio="1:0"
+                    aspectRatio="955:545"
                     sizes="(max-width: 600px) 200px, 600px"
                     formats={["png"]}
                     alt="Home1"
@@ -91,7 +91,7 @@ const pageTitle = "Adhesion";
             <Picture
                 src="/assets/images/adhesion-3.png"
                 widths={[100, 200, 600]}
-                aspectRatio="1:0"
+                aspectRatio="498:376"
                 sizes="(max-width: 600px) 200px, 600px"
                 formats={["png"]}
                 alt="Home1"
