--- a/src/pages/research/environment.astro
+++ b/src/pages/research/environment.astro
@@ -63,7 +63,7 @@ const pageTitle = "Environment";
             deposition technology. Work is under progress to establish
             process/structure/properties of the deposited PHA layer
         </p>
-        <section class="flex flex-row justify-around">
+        <section class="flex flex-row justify-around items-start">
             <figure
                 class="flex flex-col justify-center items-center text-center">
                 <figcaption>
@@ -72,7 +72,7 @@ const pageTitle = "Environment";
                 <Picture
                     src="/assets/images/environment-1-1.png"
                     widths={[100, 150, 500]}
-                    aspectRatio="1:0"
+                    aspectRatio="1113:1038"
                     sizes="(max-width: 600px) 150px, 500px"
                     formats={["png"]}
                     alt="Home1"
@@ -86,7 +86,7 @@ const pageTitle = "Environment";
                 <Picture
                     src="/assets/images/environment-1-2.png"
                     widths={[50, 200, 300]}
-                    aspectRatio="1:0"
+                    aspectRatio="237:212"
                     sizes="(max-width: 600px) 200px, 300px"
                     formats={["png"]}
                     alt="Home1"
@@ -101,7 +101,7 @@ const pageTitle = "Environment";
                 <Picture
                     src="/assets/images/environment-1-3.jpg"
                     widths={[100, 200, 350]}
-                    aspectRatio="1:0"
+                    aspectRatio="486:365"
                     sizes="(max-width: 600px) 200px, 350px"
                     formats={["jpg"]}
                     alt="Home1"
@@ -134,13 +134,13 @@ const pageTitle = "Environment";
             physic-chemical analysis (DSC, FTIR) are performed to elucidate the
             influence of cycled loading on the crystallinity of the blends.
         </p>
-        <section class="flex flex-row justify-around">
+        <section class="flex flex-row justify-around items-center">
             <figure
                 class="flex flex-col justify-center items-center text-center">
                 <Picture
                     src="/assets/images/environment-3-1.png"
                     widths={[100, 200, 400]}
-                    aspectRatio="1:0"
+                    aspectRatio="511:512"
                     sizes="(max-width: 600px) 200px, 400px"
                     formats={["png"]}
                     alt="Home1"
@@ -150,9 +150,9 @@ const pageTitle = "Environment";
             <figure
                 class="flex flex-col justify-center items-center text-center">
                 <Picture
-                    src="/assets/images/environment-3-2.png"
+                    src="/assets/images/environment-3-2.v2.png"
                     widths={[100, 200, 350]}
-                    aspectRatio="1:0"
+                    aspectRatio="1055:1001"
                     sizes="(max-width: 600px) 200px, 350px"
                     formats={["png"]}
                     alt="Home1"
