--- a/src/pages/publications.astro
+++ b/src/pages/publications.astro
@@ -6,6 +6,357 @@ const pageTitle = "Publications";
 <BaseLayout {pageTitle}>
     <h2 class="text-4xl font-bold mt-7">{pageTitle}</h2>
     <article>
-        <p>Some text</p>
+        <h3>Peer-reviewed papers</h3>
+        <ul class="flex flex-col gap-8">
+            <!-- Paper 13 -->
+            <li class="flex flex-col shrink">
+                <span class="text-lg">
+                    <span class="font-bold">P13.</span>
+                    “Topological data analysis for roughness surfaces of bonding
+                    assembly”,
+                </span>
+                <span class="font-bold text-zinc-700">
+                    Canot H., Durand P., Frénod E., Hassoune B., Nassiet V. and
+                    <span class="italic">Tramis O.</span>
+                </span>
+                <span class="mt-1.5">
+                    <span
+                        class="border text-yellow-600 border-yellow-600 rounded p-1 w-fit">
+                        In preparation
+                    </span>
+                </span>
+            </li>
+            <!-- Paper 12 -->
+            <li class="flex flex-col shrink">
+                <span class="text-lg">
+                    <span class="font-bold">P12.</span>
+                    “Harnessing poly(3-hydroxybutyrate-co-3-hydroxyvalerate) (PHBV)
+                    powder for direct production of PHBV/paper multi-layer structures
+                    with improved barrier properties”,
+                </span>
+                <span class="font-bold text-zinc-700">
+                    <span class="italic">Tramis O.</span>, Rol F., Naillon A.,
+                    Bailly L., Orgeas L., Roux D., and El Kissi N.
+                </span>
+                <span class="mt-1.5">
+                    <span
+                        class="border text-blue-600 border-blue-600 rounded p-1 w-fit">
+                        Submitted
+                    </span>
+                    &ZeroWidthSpace; to
+                    <span class="font-bold italic">Carbohydrates</span>
+                    &ZeroWidthSpace;, 12/2022
+                </span>
+            </li>
+            <!-- Paper 11 -->
+            <li class="flex flex-col shrink">
+                <span class="text-lg">
+                    <span class="font-bold">P11.</span>
+                    “Impacts of an air plasma treatment on the probe-tack adhesion
+                    of nanostructured epoxy adhesives”,
+                </span>
+                <span class="font-bold text-zinc-700">
+                    <span class="italic">Tramis O.</span>, Merlinge N.,
+                    Hassoune-Rhabbour B., Fazzini M., and Nassiet V.
+                </span>
+                <span class="mt-1.5">
+                    <span
+                        class="border text-blue-600 border-blue-600 rounded p-1 w-fit">
+                        Submitted
+                    </span>
+                    &ZeroWidthSpace; to
+                    <span class="font-bold italic">
+                        ACS Applied Engineering Materials
+                    </span>
+                    &ZeroWidthSpace;, 11/2022
+                </span>
+            </li>
+            <!-- Paper 10 -->
+            <li class="flex flex-col shrink">
+                <span class="text-lg">
+                    <span class="font-bold">P10.</span>
+                    “Induction of foaming in vacuum drying by needle stimulation
+                    and the impact of solution viscosity, vapor pressure, and the
+                    type of solute and solvent”,
+                </span>
+                <span class="font-bold text-zinc-700">
+                    Fujioka A., Yamamoto R.,
+                    <span class="italic">Tramis O.</span>, Ishida H., Ono T.,
+                    Ishida N., and Imamura K. (2021).
+                </span>
+                <span class="mt-1.5">
+                    <span class="font-bold italic">
+                        Drying Technology (IF: 3.6)
+                    </span>
+                    &ZeroWidthSpace;, 2021 -
+                    <a href="https://doi.org/10.1080/07373937.2021.2017965">
+                        https://doi.org/10.1080/07373937.2021.2017965
+                    </a>
+                </span>
+            </li>
+            <!-- Paper 9 -->
+            <li class="flex flex-col shrink">
+                <span class="text-lg">
+                    <span class="font-bold">P9.</span>
+                    “Foaming characteristics of sugar- and polyvinylpyrrolidone-alcohol
+                    solutions during vacuum foam drying: a rheological approach”,
+                </span>
+                <span class="font-bold text-zinc-700">
+                    <span class="italic">Tramis O.</span>, Fujioka A., Imanaka
+                    H., Ishida N., and Imamura K.
+                </span>
+                <span class="mt-1.5">
+                    <span class="font-bold italic">
+                        Colloids and Surfaces A (IF: 4.5)
+                    </span>
+                    &ZeroWidthSpace;, 2021 -
+                    <a href="https://doi.org/10.1016/j.colsurfa.2021.127174">
+                        https://doi.org/10.1016/j.colsurfa.2021.127174
+                    </a>
+                </span>
+            </li>
+            <!-- Paper 8 -->
+            <li class="flex flex-col shrink">
+                <span class="text-lg">
+                    <span class="font-bold">P8.</span>
+                    “Torricelli's Curtain: Morphology of Horizontal Laminar Jets
+                    Under Gravity”,
+                </span>
+                <span class="font-bold text-zinc-700">
+                    <span class="italic">Tramis O.</span>, Merlin-Anglade E.,
+                    Paternoster G., Rabaud M., and Ribe N. M.
+                </span>
+                <span class="mt-1.5">
+                    <span class="font-bold italic">
+                        Fluid Dynamics (IF: 0.6)
+                    </span>
+                    &ZeroWidthSpace;, 2021 -
+                    <a href="https://arxiv.org/abs/2106.02296">
+                        https://arxiv.org/abs/2106.02296
+                    </a>
+                </span>
+            </li>
+            <!-- Paper 7 -->
+            <li class="flex flex-col shrink">
+                <span class="text-lg">
+                    <span class="font-bold">P7.</span>
+                    “Structure/property relationship of nanostructured functionally
+                    graded epoxy adhesives”,
+                </span>
+                <span class="font-bold text-zinc-700">
+                    <span class="italic">Tramis O.</span>, Hassoune-Rhabbour B.
+                    and Nassiet V.
+                </span>
+                <span class="mt-1.5">
+                    <span class="font-bold italic">
+                        International Journal of adhesion and adhesives (IF:
+                        2.7)
+                    </span>
+                    &ZeroWidthSpace;, 2021 -
+                    <a href="https://doi.org/10.1016/j.ijadhadh.2021.102872">
+                        https://doi.org/10.1016/j.ijadhadh.2021.102872
+                    </a>
+                </span>
+            </li>
+            <!-- Paper 6 -->
+            <li class="flex flex-col shrink">
+                <span class="text-lg">
+                    <span class="font-bold">P6.</span>
+                    “Enhancement of the fatigue life of recycled PP by incorporation
+                    of recycled opaque PET collected from household milk bottle wastes”,
+                </span>
+                <span class="font-bold text-zinc-700">
+                    <span class="italic">Tramis O.</span>, Garnier C., Yus C.,
+                    Irusta S., Chabert F.
+                </span>
+                <span class="mt-1.5">
+                    <span class="font-bold italic">
+                        Waste Management (IF: 5.4)
+                    </span>
+                    &ZeroWidthSpace;, 2021 - Citations: 9 -
+                    <a href="https://doi.org/10.1016/j.wasman.2021.02.006">
+                        https://doi.org/10.1016/j.wasman.2021.02.006
+                    </a>
+                </span>
+            </li>
+            <!-- Paper 5 -->
+            <li class="flex flex-col shrink">
+                <span class="text-lg">
+                    <span class="font-bold">P5.</span>
+                    “Sole-amorphous-sugar-based solid dispersion of curcumin and
+                    the influence of formulation composition on the dissolution of
+                    curcumin”,
+                </span>
+                <span class="font-bold text-zinc-700">
+                    Sekitoh T., Okamoto T., Fujioka A.,
+                    <span class="italic">Tramis O.</span>, Takeda K., Matsuura
+                    T., Imanaka H., Ishida N., and Imamura K.
+                </span>
+                <span class="mt-1.5">
+                    <span class="font-bold italic">
+                        Drying Technology (IF: 3.6)
+                    </span>
+                    &ZeroWidthSpace;, 2020 - Citations: 9 -
+                    <a href="https://doi.org/10.1080/07373937.2020.1752711">
+                        https://doi.org/10.1080/07373937.2020.1752711
+                    </a>
+                </span>
+            </li>
+            <!-- Paper 4 -->
+            <li class="flex flex-col shrink">
+                <span class="text-lg">
+                    <span class="font-bold">P4.</span>
+                    “Spontaneous foaming during vacuum drying of polyvinylpyrrolidone
+                    and sugar-alcohol mixtures and enhancement of water-dissolution
+                    of water insoluble drug”,
+                </span>
+                <span class="font-bold text-zinc-700">
+                    <span class="italic">Tramis O.</span>, Fujioka A., Imanaka
+                    H., Ishida N., and Imamura K.
+                </span>
+                <span class="mt-1.5">
+                    <span class="font-bold italic">
+                        Drying Technology (IF: 3.6)
+                    </span>
+                    &ZeroWidthSpace;, 2020 - Citations: 4 -
+                    <a href="https://doi.org/10.1080/07373937.2020.1822863">
+                        https://doi.org/10.1080/07373937.2020.1822863
+                    </a>
+                </span>
+            </li>
+            <!-- Paper 3 -->
+            <li class="flex flex-col shrink">
+                <span class="text-lg">
+                    <span class="font-bold">P3.</span>
+                    “Immobilization of surface non-affinitive protein onto a metal
+                    surface by an external electric field”,
+                </span>
+                <span class="font-bold text-zinc-700">
+                    <span class="italic">Tramis O.</span>, Nakao H., Iizuka R.,
+                    Imanaka H., Ishida N., and Imamura K.
+                </span>
+                <span class="mt-1.5">
+                    <span class="font-bold italic">
+                        Journal of Bioscience and Bioengineering (IF: 2.4)
+                    </span>
+                    &ZeroWidthSpace;, 2020 - Citations: 3 -
+                    <a href="https://doi.org/10.1016/j.jbiosc.2019.09.008">
+                        https://doi.org/10.1016/j.jbiosc.2019.09.008
+                    </a>
+                </span>
+            </li>
+            <!-- Paper 2 -->
+            <li class="flex flex-col shrink">
+                <span class="text-lg">
+                    <span class="font-bold">P2.</span>
+                    “Experimental investigation on the effect of nanostructuration
+                    on the adherence properties of epoxy adhesives by a probe tack
+                    test”,
+                </span>
+                <span class="font-bold text-zinc-700">
+                    <span class="italic">Tramis O.</span>, Brethous R.,
+                    Hassoune-Rhabbour B. and Nassiet V.
+                </span>
+                <span class="mt-1.5">
+                    <span class="font-bold italic">
+                        International Journal of adhesion and adhesives (IF:
+                        2.7)
+                    </span>
+                    &ZeroWidthSpace;, 2016 - Citations: 9 -
+                    <a href="https://doi.org/10.1016/j.ijadhadh.2015.12.021">
+                        https://doi.org/10.1016/j.ijadhadh.2015.12.021
+                    </a>
+                </span>
+            </li>
+            <!-- Paper 1 -->
+            <li class="flex flex-col shrink">
+                <span class="text-lg">
+                    <span class="font-bold">P1.</span>
+                    “Shape of a liquid jet flowing out from a cylindrical tube”,
+                </span>
+                <span class="font-bold text-zinc-700">
+                    <span class="italic">Tramis O.</span> and Rabaud M
+                </span>
+                <span class="mt-1.5">
+                    <span class="font-bold italic">
+                        Proceedings of the 20th meeting on mechanics
+                    </span>
+                    &ZeroWidthSpace;, 2011 - Citations: 1
+                </span>
+            </li>
+            <li class="flex flex-col shrink">
+                <span class="italic mb-2">
+                    Continued by a follow-up study, one year later:
+                </span>
+                <span class="text-lg">
+                    “Torricelli's curtain: morphology of horizontal laminar jets
+                    under gravity”,
+                </span>
+                <span class="font-bold text-zinc-700">
+                    Ribe, N., Paternoster, G., and Rabaud, M.
+                </span>
+                <span class="mt-1.5">
+                    <span class="font-bold italic">
+                        Physical Review Fluids (IF: 2.5)
+                    </span>
+                    &ZeroWidthSpace;, 2012 - Citations: 1 -
+                    <a
+                        href="https://ui.adsabs.harvard.edu/abs/2012APS..DFDE28004R/abstract">
+                        https://ui.adsabs.harvard.edu/abs/2012APS..DFDE28004R/abstract
+                    </a>
+                </span>
+            </li>
+        </ul>
+    </article>
+    <article>
+        <h3>Book chapter</h3>
+        <ul>
+            <li class="flex flex-col shrink">
+                <span class="text-lg">
+                    <span class="font-bold">B1.</span>
+                    “Chapter 22. Electrical and Electronics”, in ADHESIVE BONDING:
+                    SCIENCE, TECHNOLOGY AND APPLICATIONS,
+                </span>
+                <span class="font-bold text-zinc-700">
+                    Editor: Robert Adams
+                </span>
+                <span class="font-bold text-zinc-700">
+                    Publisher: Woodhead Publishing
+                </span>
+                <span class="font-bold text-zinc-700">
+                    ISBN: 978-0-323-85143-5 <a
+                        href="https://www.elsevier.com/books/adhesive-bonding/adams/978-0-12-819954-1">
+                        https://www.elsevier.com/books/adhesive-bonding/adams/978-0-12-819954-1
+                    </a>
+                </span>
+            </li>
+        </ul>
+    </article>
+    <article>
+        <h3>Patents</h3>
+        <ul>
+            <li class="flex flex-col shrink">
+                <span class="text-lg">
+                    <span class="font-bold">Pa1.</span>
+                    “Procédé de préparation de films de poly-β-hydroxyalcanoate”,
+                    CNRS/Université Grenoble Alpes/Institut Polytechnique de Grenoble,
+                </span>
+                <span class="font-bold text-zinc-700">
+                    <span class="italic">Tramis O.</span>, Roux D., El Kissi N.
+                </span>
+                <span class="mt-1.5">
+                    <span
+                        class="border text-blue-600 border-blue-600 rounded p-1 w-fit">
+                        Submitted
+                    </span>
+                    &ZeroWidthSpace; to
+                    <span class="font-bold italic">
+                        Institut National de la Propriété Intellectuelle (INPI)
+                        (French patent)
+                    </span>
+                    &ZeroWidthSpace;, 07/13/2022
+                </span>
+            </li>
+        </ul>
     </article>
 </BaseLayout>
